tests/should_fail/logic_alias/alias_defined_in_different_trait.stderr
error: A trait method can only be aliased by a logic method from the same trait. (program method defined in trait T2, logic alias defined in trait T1)
  --> alias_defined_in_different_trait.rs:16:5
   |
16 |     #[logic_alias(Self::is_zero_log(x@))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> alias_defined_in_different_trait.rs:17:5
   |
17 |     fn is_zero(x: i64) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> alias_defined_in_different_trait.rs:9:5
   |
 9 |     fn is_zero_log(x: Int) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

